--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
       <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-
+    <!-- Header section start -->
+    <header>
+      <!-- Nav-bar -->
+        <div class="row hadder-container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+                <div class="container-fluid d-flex justify-content-around align-items-center">
+                  <a class="navbar-brand me-auto logo" href="#"><img src="./image/logo-white.svg" alt="Logo"></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse nav-items flex-grow-0 d-none" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active text-white" aria-current="page" href="#">About</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active text-white" aria-current="page" href="#">Services</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active text-white" aria-current="page" href="#">Contact</a>
+                      </li>
+                    </ul>
+                    <button type="button" class="btn text-white border-1 border-white">202-303-0188</button>
+                  </div>
+                </div>
+              </nav>
+        </div>
+    </header>
+    <!-- Header section End -->
   </body>
 </html>
