Create and design Hero  and same-btn section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,23 @@
                 </div>
               </nav>
         </div>
+        <!-- Hero section  -->
+        <main>
+          <div class="row hero-section">
+              <div class="col hero-container text-white d-flex flex-column gap">
+                  <h1 class="text-center">
+                      we all love <br> <span>nature</span>
+                  </h1>
+                  <p class="text-center">
+                      Look deep into nature, and you will
+                      understand everything better.
+                  </p>
+                  <div class="btn-div d-flex justify-content-center ">
+                      <button type="button" class="same-btn rounded">Get Started</button>
+                  </div>
+              </div>
+          </div>
+      </main>
     </header>
     <!-- Header section End -->
   </body>
