Create and design review section

--- a/index.html
+++ b/index.html
@@ -57,5 +57,28 @@
       </main>
     </header>
     <!-- Header section End -->
+    <!--* Review Section Start-->
+    <section id="review" class="d-flex align-items-center justify-content-center ">
+      <div class="row review-container ">
+          <div class="col d-flex flex-column justify-content-center align-items-center gap-3">
+              <div class="first">
+                  <img src="./image/quotes.svg" alt="Quotation Sign">
+              </div>
+              <div class="second">
+                  <p>“Original and with an innate understanding of their <br class="d-none d-md-block"> customer’s needs, the team at Love Nature are always a <br class="d-none d-md-block"> pleasure to work with.”</p>
+              </div>
+              <div class="third">
+                  <div class="img-box">
+                      <img src="./image/avatar_on_home.png" alt="">
+                  </div>
+                  <div class="content">
+                      Jane Miller
+                  </div>
+              </div>
+          </div>
+      </div>
+
+    </section>
+    <!--* Review Section End -->
   </body>
 </html>
