Create and design the service section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,53 @@
       </main>
     </header>
     <!-- Header section End -->
+    <!--* Service Section Start -->
+    <section id="services">
+      <h2>&nbsp; Our Services &nbsp;</h2>
+      <div class="row mb-5 gap-5 gap-md-0 service-section">
+          <div class="col service-column mb-3 mb-xl-0">
+              <div class="img-box">
+                  <img src="./image/service-1.jpg" alt="Service Image 1">
+              </div>
+              <div class="img-header">
+                  <h3>Web Design</h3>
+              </div>
+              <div class="img-content">
+                  <p>
+                      Focus on how you can help and benefit your user. Use simple words so that you don't confuse people.
+                  </p>
+              </div>
+          </div>
+          <div class="col service-column">
+              <div class="img-box">
+                  <img src="./image/service-2.jpg" alt="Service Image 1">
+              </div>
+              <div class="img-header">
+                  <h3>Web Design</h3>
+              </div>
+              <div class="img-content">
+                  <p>
+                      Focus on how you can help and benefit your user. Use simple words so that you don't confuse people.
+                  </p>
+              </div>
+          </div>
+          <div class="col service-column mt-5 mt-xl-0">
+              <div class="img-box">
+                  <img src="./image/service-3.jpg" alt="Service Image 1">
+              </div>
+              <div class="img-header">
+                  <h3>Web Design</h3>
+              </div>
+              <div class="img-content">
+                  <p>
+                      Focus on how you can help and benefit your user. Use simple words so that you don't confuse people.
+                  </p>
+              </div>
+          </div>
+
+      </div>
+      <div class="gap-div"></div>
+    </section>
     <!--* Review Section Start-->
     <section id="review" class="d-flex align-items-center justify-content-center ">
       <div class="row review-container ">
