--- a/index.html
+++ b/index.html
@@ -127,5 +127,19 @@
 
     </section>
     <!--* Review Section End -->
+    <!--* About Section -->
+    <section id="about">
+      <div class="row d-flex flex-column flex-md-row">
+          <div class="col about-col-1 d-flex flex-column gap-4">
+              <p class="text-uppercase">About us</p>
+              <h2>Tell website visitors who you are and why they should choose your business.</h2>
+              <p>Because when a visitor first lands on your website, you’re a stranger to them. They have to get to know you in order to want to read your blog posts, subscribe to your email newsletter, or buy what you’re selling.</p>
+              <button>Find Out More</button>
+          </div>
+          <div class="col about-col-2">
+              <img src="./image/leaf.jpg" alt="Leaf Image">
+          </div>
+      </div>
+    </section>
   </body>
 </html>
