Create and design the Question section

--- a/index.html
+++ b/index.html
@@ -141,5 +141,15 @@
           </div>
       </div>
     </section>
+    <!--* Question Section -->
+    <div id="question" class="d-flex justify-content-center align-items-center">
+      <div class="row d-flex justify-content-center align-items-center" >
+          <div class="col question-con d-flex flex-column justify-content-center align-items-center gap-3 gap-md-4 gap-lg-5">
+              <h2>QUESTIONS?</h2>
+              <p>Whether you’re curious about features, a free trial, or <br class="d-none d-sm-block"> even press, we’re here to answer any questions.</p>
+              <button type="button" class="border-0 rounded">Let's Talk Now</button>
+          </div>
+      </div>
+    </div>
   </body>
 </html>
