Create and design the footer section

--- a/index.html
+++ b/index.html
@@ -151,5 +151,20 @@
           </div>
       </div>
     </div>
+    <!--* Footer Section -->
+    <footer class="">
+      <div class="row row-cols-1 row-cols-lg-3 h-100">
+          <div class="col footer-col footer-col-1">
+            <ul class="d-flex list-unstyled justify-content-center align-items-center text-decoration-none ">
+              <li><a href="#" class="text-decoration-none mx-2">Home</a></li>
+              <li><a href="#" class="text-decoration-none mx-2">About</a></li>
+              <li><a href="#" class="text-decoration-none mx-2">Service</a></li>
+              <li><a href="#" class="text-decoration-none mx-2">Contact</a></li>
+            </ul>
+          </div>
+          <div class="col footer-col footer-col-2"><img src="./image/logo-green.svg" alt="Logo"></div>
+          <div class="col footer-col footer-col-3"><p>Love Nature by Sakib Hasan</p></div>
+      </div>
+    </footer>
   </body>
 </html>
