--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Love Nature</title>
       <link rel="stylesheet" href="./css/bootstrap.css">
       <link rel="stylesheet" href="./css/style.css">
+      <link rel="icon" type="image/png" href="./image/logo-green.svg">
   </head>
   <body>
     <!-- Header section start -->
